# mypy-repro

./: README.md  pyproject.toml
src/mypy_repro/: utils.py
tests/: test.py
