[project]
name = "mypy-repro"
version = "0.0.0"
requires-python = ">= 3.10"

[build-system]
requires = ["setuptools>=0.61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.mypy]
strict = true
enable_error_code = ["possibly-undefined"]
python_version = "3.10"
exclude = [
    "build/", # output of package build process
    "venv/",
    ".venv/",
]

[[tool.mypy.overrides]]
# don't require type annotations of test functions
module = "tests.*"
disallow_untyped_defs = false
